# umi-tools-rs

./: .gitignore  CITATION.cff  CLAUDE.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  build.rs  hk.pkl  mise.toml  pyproject.toml  release.toml
.github/: renovate.json
.github/workflows/: ci.yml  release.yml
benchmarks/: run.sh  setup.sh
crates/umi-core/: Cargo.toml
crates/umi-core/src/: count.rs  dedup.rs  error.rs  extract.rs  group.rs  lib.rs  pattern.rs  whitelist.rs
src/: main.rs
tests/: extract_integration.rs
tests/umi_tools_compat/: conftest.py  test_count.py  test_dedup.py  test_extract.py  test_group.py  test_whitelist.py
