[workspace]
members = ["crates/*"]

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

[package]
name = "umi-tools-rs"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
umi-core = { path = "crates/umi-core" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
flate2 = "1"
