[package]
name = "umi-core"
version = "0.0.0-dev"
edition = "2024"
description = "Core library for umi-tools-rs — UMI extraction, deduplication, grouping, and counting"
license = "MIT"
repository = "https://github.com/vertti/umi-tools-rs"

[lints]
workspace = true

[dependencies]
needletail = "0.6"
flate2 = { version = "1", default-features = false, features = ["zlib-ng"] }
regex = "1"
rust-htslib = { version = "1", default-features = false }
thiserror = "2"
